[Frontend] Ensure user list stays behind popups
For unknown reasons, it would not do that in dark mode for me.

--- a/src/static/room.css
+++ b/src/static/room.css
@@ -920,6 +920,7 @@ button.button-icon > img {
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 100;
 }
 .windows-wrapper {
   pointer-events: none;
